<resources>
    <string name="app_name">Upkeep-app</string>
    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="update">update</string>
    <string name="fleets">Fleets</string>
    <string name="boats">Boats</string>
    <string name="insert">Insert</string>
    <string name="stores">Stores</string>
    <string name="tasks">Tasks</string>
    <string name="upkeeps">Upkeeps</string>
    <string name="operators">Operators</string>
    <string name="components">Components</string>
    <string name="services">Services</string>
</resources>