<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.UpdateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/eTFleets"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/fleets"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/bUpdateFleet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/update"
                app:layout_constraintEnd_toEndOf="@+id/eTFleets"
                app:layout_constraintStart_toStartOf="@+id/eTFleets"
                app:layout_constraintTop_toBottomOf="@+id/eTFleets" />

            <EditText
                android:id="@+id/eTBoats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/boats"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bUpdateFleet" />

            <Button
                android:id="@+id/bUpdateBoat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/update"
                app:layout_constraintEnd_toEndOf="@+id/eTFleets"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/eTFleets"
                app:layout_constraintTop_toBottomOf="@+id/eTBoats" />

            <EditText
                android:id="@+id/eTServices"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/services"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bUpdateBoat" />

            <Button
                android:id="@+id/bUpdateService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/update"
                app:layout_constraintEnd_toEndOf="@+id/eTFleets"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/eTFleets"
                app:layout_constraintTop_toBottomOf="@+id/eTServices" />

            <EditText
                android:id="@+id/eTComponents"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/components"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bUpdateService" />

            <Button
                android:id="@+id/bUpdateComponent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/update"
                app:layout_constraintEnd_toEndOf="@+id/eTFleets"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/eTFleets"
                app:layout_constraintTop_toBottomOf="@+id/eTComponents" />


            <EditText
                android:id="@+id/eTUpkeeps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/upkeeps"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bUpdateComponent" />

            <EditText
                android:id="@+id/eTTasks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/tasks"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bUpdateUpkeep" />

            <Button
                android:id="@+id/bUpdateTask"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/update"
                app:layout_constraintEnd_toEndOf="@+id/eTFleets"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/eTFleets"
                app:layout_constraintTop_toBottomOf="@+id/eTTasks" />

            <EditText
                android:id="@+id/eTOperators"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/operators"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bUpdateTask" />

            <Button
                android:id="@+id/bUpdateUpkeep"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/update"
                app:layout_constraintEnd_toEndOf="@+id/eTFleets"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/eTFleets"
                app:layout_constraintTop_toBottomOf="@+id/eTUpkeeps" />

            <Button
                android:id="@+id/bUpdateOperator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/update"
                app:layout_constraintEnd_toEndOf="@+id/eTFleets"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/eTFleets"
                app:layout_constraintTop_toBottomOf="@+id/eTOperators" />

            <EditText
                android:id="@+id/eTStores"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/stores"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bUpdateOperator" />

            <Button
                android:id="@+id/bUpdateStore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/update"
                app:layout_constraintEnd_toEndOf="@+id/eTFleets"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/eTFleets"
                app:layout_constraintTop_toBottomOf="@+id/eTStores" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</ScrollView>